--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1526,7 +1526,7 @@ a.navbar-brand {
     }
     
 
-    /*================================
+/*================================
 checkout page css
 =================================*/
 
@@ -1571,26 +1571,24 @@ checkout page css
   }
 
   .c_Button2{
-    /* background-color: green; */
     padding-top: 15px;
   }
 
   .pickup-grid-container{
     display: grid;
-  grid-template-columns: repeat(1, 1fr);
-  grid-template-rows: repeat(2, 60px);
-  /* background-color: yellow; */
-  background-color: white;
-  color: black;
-  width: 40fr;
-  padding: 10px;
-  grid-gap: 0px;
-  border-radius: 6px;
-  border: 100px;
-  width:60%;
-  text-align: center;
-  margin: auto;
-  height: 200px;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(2, 60px);
+    background-color: white;
+    color: black;
+    width: 40fr;
+    padding: 10px;
+    grid-gap: 0px;
+    border-radius: 6px;
+    border: 100px;
+    width:60%;
+    text-align: center;
+    margin: auto;
+    height: 200px;
   }
 
   .select-ok {
@@ -1598,6 +1596,7 @@ checkout page css
     color:white;
     border-color: rgb(39, 125, 136);
   }
+  
   .c_puheading{
     grid-column-start: 1;
     grid-column-end: 3;
@@ -1708,14 +1707,14 @@ checkout page css
     }
 }
 
-/*for cart */
-/* for the cart to remain in center */
+/*=======================================
+for cart css
+======================================== */
 .c_container {
     max-width: 900px;
     margin: 0 auto;
     padding: 0 1.5em;
 }
-/* for cart heading */
 .c_section-header {
     font-weight: normal;
     color: #333;
@@ -1723,15 +1722,11 @@ checkout page css
     font-size: 2.5em;
 }
 
-/* cart heading styles */
-/* for addding lines btw pdt's */
 .cart-header {
     font-weight: bold;
     font-size: 1.25em;
     color: #333;
 }
-
-
 .cart-column {
     display: flex;
     align-items: center;
@@ -1828,7 +1823,9 @@ checkout page css
     font-size: 1.75em;
 }
 
-/*For credit card payment form*/
+/*===================================
+For credit card payment form
+=====================================*/
 
 .cc_row {
     display: -ms-flexbox; 
@@ -1846,7 +1843,6 @@ checkout page css
 
 .cc_body{
     background: linear-gradient(45deg, #49D49D 10%, #A2C7E5 90%);
-    /* padding: 25% 25% 25% 25%; */
     padding: 10% 10% 10% 10%;
 }
 
@@ -1857,7 +1853,6 @@ checkout page css
 .cc_container {
     background-color: white;
     padding: 5px 20px 15px 20px;
-    /* padding:90px 200px 15px 200px; */
     border: 1px solid lightgrey;
     border-radius: 3px;
     box-sizing: border-box;
@@ -1925,6 +1920,89 @@ checkout page css
     }
 }
 
+/*====================================
+For checkout page status animation
+======================================*/
+.wrap{
+    margin: 100px;
+    margin-top: 0px;
+    margin-left: 50px;
+    margin-bottom: 30px;
+  }
+  
+  #mycircle{
+    stroke-dashoffset: 800;
+    stroke-dasharray: 800;
+    animation-name: padda;
+    animation-duration: 2s;
+    animation-timing-function: ease-in-out;
+    animation-fill-mode: forwards;
+  }
+  
+  #mycheck{
+    stroke-dashoffset: 800;
+    stroke-dasharray: 800;
+    animation-name: padda;
+    animation-duration: 2s;
+    animation-timing-function: ease-in-out;
+    animation-delay: 1s;
+    animation-fill-mode: forwards;
+  }
+  
+  @keyframes padda{
+    to{
+      stroke-dashoffset: 0;
+    }
+  }
+  
+  @media (max-width: 400px){
+    .ss_body{
+        padding-top: 20%;
+        padding-left: 10%;
+        padding-right: 10%;
+        padding-bottom: 30%;
+    }
+    .wrap {
+        margin-left: 50px;
+        margin-right: 50px;
+    }
+}
+
+@media (min-width: 401px) and (max-width: 550px){
+    .ss_body{
+        padding-top: 30%;
+        padding-left: 10%;
+        padding-right: 10%;
+        padding-bottom: 40%;
+    }
+    .wrap {
+        margin-left: 50px;
+        margin-right: 50px;
+    }
+}
+
+@media (min-width: 551px) and (max-width: 770px){
+    .ss_body{
+        padding-top: 40%;
+        padding-left: 10%;
+        padding-right: 10%;
+        padding-bottom: 50%;
+    }
+    .wrap {
+        margin-left: 50px;
+        margin-right: 50px;
+    }
+}
+/*=================================
+media qury for orders page
+===================================*/
+@media (max-width: 450px){
+    
+}
+
+/*=================================
+for nav bar
+==================================*/
 .privacy{
     text-align: justify;
     padding: 70px;
@@ -1955,7 +2033,8 @@ checkout page css
         max-width:100%;
         width: 50%;  
         padding-top: 20px;
-        padding-left: 100px;
+        padding-left: 10px;
+        margin: auto;
     }
     .orderrow{
         padding-top: 100px;
@@ -1971,7 +2050,8 @@ checkout page css
         padding-top: 20px;
         max-width:100%;
         width: 30%;
-        padding-left: 40px; 
+        padding-left: 20px;
+        margin: auto; 
     }
     .orderrow{
         padding-top: 100px;
@@ -1985,6 +2065,24 @@ checkout page css
 .shop-item-title{
     font-size: large;
 }
+
+@media only screen and (max-width: 1145px) {
+    .col-md-2{
+        padding-top: 20px;
+        max-width:100%;
+        width: 30%;
+        padding-left: 20px;
+        margin: auto; 
+    }
+    .orderrow{
+        padding-top: 100px !important;
+        padding-left:20px;
+    }
+    section{
+        padding: 0px;
+    }
+}
+
 @media only screen and (min-width: 1480px){
     section{
         padding: 0px;
