status page styles changed

--- a/public/app/views/pages/contactStatus.html
+++ b/public/app/views/pages/contactStatus.html
@@ -1,1 +1,15 @@
-<div class="page-header"><h4>Thank you for contacting La Taco. We will get back to you within two business days.</h4></div>
+<section id="contact" style="align-items: center;">
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <h4 style="text-align: center;">Thank you for contacting La Taco. We will get back to you within two business days.</h4>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+</section>
