--- a/public/app/views/pages/hiremeStatus.html
+++ b/public/app/views/pages/hiremeStatus.html
@@ -1,1 +1,15 @@
-<div class="page-header"><h4>Thank you for for applying us at La Taco. We will get back to you within two business days.</h4></div>
+<section id="contact" style="align-items: center;">
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>    
+    <h4>Thank you for for applying us at La Taco. We will get back to you within two business days.</h4>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+</section>
