--- a/public/app/views/pages/home.html
+++ b/public/app/views/pages/home.html
@@ -39,7 +39,7 @@
     </div>
     <div class="col-md-4 text-center">
       <h2 >Specialities</h2>
-      <img class="img-circle" src="../../assets/images/Quess.jpg" height="140px" width="140px" title="Specialities">
+      <img class="img-circle" src="../../assets/images/Ques.jpg" height="140px" width="140px" title="Specialities">
       <h2 >Chicken Quesadilla</h2>
       <p>Combination of Monterey jack and cheddar with grilled chicken and caramelized onions</p>
     </div>
